--- a/trunk/web/includes/header.html
+++ b/trunk/web/includes/header.html
@@ -24,8 +24,7 @@
     <td colspan="3" align="right" bgcolor="CDC673">
         <!-- The "Delete cookies" link is for testing and should 
         be removed from a production environment -->
-        <a href="/musicStore/catalog/deleteCookies">Delete cookies</a> |
-        <a href="/musicStore/cart/displayCart">Show cart</a>
+        <a href="/musicStore/catalog/deleteCookies">Delete cookies</a>
     </td>
 </tr>
 
