--- a/web/pcshop.css
+++ b/web/pcshop.css
@@ -27,3 +27,12 @@ li {font-family: Arial, sans-serif; font-size: 12px; margin-bottom: 3px}
 .normal      {font-family: Arial, sans-serif; margin-left: 0px}
 .times       {font-family: "Times New Roman", Times, serif}
 .identlevel  {margin-top: -12px; margin-bottom: -12px; margin-left: 18px}
+
+
+
+
+.onlineshop{
+    background:url('images/onlineshop.jpg') no-repeat right bottom;
+    
+        
+}
