--- a/web/includes/headerlogout.html
+++ b/web/includes/headerlogout.html
@@ -25,6 +25,7 @@
         <!-- The "Delete cookies" link is for testing and should 
         be removed from a production environment -->
         <a href="/musicStore/catalog/deleteCookies">Delete cookies</a>
+        <a href="shop?action=logout">Logout</a>
         
     </td>
 </tr>
