--- a/web/includes/header.html
+++ b/web/includes/header.html
@@ -11,23 +11,23 @@
 </head>
 
 <body>
-<center>
-<table cellpadding="5" cellspacing="0" border="0" width="1000">
+    <center>
+        <table cellpadding="5" cellspacing="0" border="0" width="1000"  >
 
-<tr> 
-    <td colspan="3">
-        <h1>The PC Shop 2011</h1>
-    </td>
-</tr>
+            <tr > 
+                <td colspan="3">
+                    <h1>The PC Shop 2011</h1>
+                </td>
+            </tr>
 
-<tr> 
-    <td colspan="3" align="right" bgcolor="CDC673">
-        <!-- The "Delete cookies" link is for testing and should 
-        be removed from a production environment -->
-        <a href="/musicStore/catalog/deleteCookies">Delete cookies</a>
-        
-    </td>
-</tr>
+            <tr> 
+                <td colspan="3" align="right" bgcolor="CDC673">
+                    <!-- The "Delete cookies" link is for testing and should 
+                    be removed from a production environment -->
+                    <a href="shop?action=deleteCookie">Delete cookies</a>
 
-<tr>
+                </td>
+            </tr>
+
+            <tr>
 
