--- a/web/includes/headerlogout.html
+++ b/web/includes/headerlogout.html
@@ -24,7 +24,7 @@
     <td colspan="3" align="right" bgcolor="CDC673">
         <!-- The "Delete cookies" link is for testing and should 
         be removed from a production environment -->
-        <a href="/musicStore/catalog/deleteCookies">Delete cookies</a>
+        <a href="shop?action=deleteCookie">Delete cookies</a>
         <a href="shop?action=logout">Logout</a>
         
     </td>
