--- a/trunk/web/pcshop.css
+++ b/trunk/web/pcshop.css
@@ -2,7 +2,7 @@ a:link    {font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #6
 a:visited {font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #333333}
 a:hover   {text-decoration: underline; color: #FFCC00}
 
-h1 {font-family: Arial, sans-serif; font-size: 36px; color: #000089; 
+h1 {font-family: Arial, sans-serif; font-size: 36px; color: #7E2217; 
     vertical-align: top; margin-top: 0px; margin-bottom: 9px}
 h2 {font-family: Arial, sans-serif; font-size: 24px; color: #663300;
     vertical-align: top; margin-top: 0px; margin-bottom: 3px}
@@ -28,7 +28,7 @@ li {font-family: Arial, sans-serif; font-size: 12px; margin-bottom: 3px}
 .times       {font-family: "Times New Roman", Times, serif}
 .identlevel  {margin-top: -12px; margin-bottom: -12px; margin-left: 18px}
 
-
+.tablebg { background: url('images/BG-Main.gif');}
 
 
 .onlineshop{
