Banner of site is designed!

--- a/trunk/web/includes/headerlogout.html
+++ b/trunk/web/includes/headerlogout.html
@@ -15,7 +15,7 @@
 <table cellpadding="5" cellspacing="0" border="0" width="1000">
 
 <tr> 
-    <td colspan="3">
+    <td colspan="3" class="tablebg" height="80">
         <h1>The PC Shop 2011</h1>
     </td>
 </tr>
