--- a/web/includes/header.html
+++ b/web/includes/header.html
@@ -15,13 +15,13 @@
         <table cellpadding="5" cellspacing="0" border="0" width="1000"  >
 
             <tr > 
-                <td colspan="3" class="tablebg" height="80">
-                    <h1>The PC Shop 2011</h1>
+                <td colspan="3" class="tablebg" height="80" align="right" >
+                    <h1> PC Shop 2011</h1>
                 </td>
             </tr>
 
             <tr> 
-                <td colspan="3" align="right" bgcolor="CDC673">
+                <td colspan="3" align="right" bgcolor="#D4A017">
                     <!-- The "Delete cookies" link is for testing and should 
                     be removed from a production environment -->
                     <a href="shop?action=deleteCookie">Delete cookies</a>
