--- a/trunk/web/pcshop.css
+++ b/trunk/web/pcshop.css
@@ -2,7 +2,7 @@ a:link    {font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #6
 a:visited {font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #333333}
 a:hover   {text-decoration: underline; color: #FFCC00}
 
-h1 {font-family: Arial, sans-serif; font-size: 36px; color: #7E2217; 
+h1 {font-family: Courier ,Arial, sans-serif; font-size: 36px; color: #342D7E; 
     vertical-align: top; margin-top: 0px; margin-bottom: 9px}
 h2 {font-family: Arial, sans-serif; font-size: 24px; color: #663300;
     vertical-align: top; margin-top: 0px; margin-bottom: 3px}
@@ -28,11 +28,31 @@ li {font-family: Arial, sans-serif; font-size: 12px; margin-bottom: 3px}
 .times       {font-family: "Times New Roman", Times, serif}
 .identlevel  {margin-top: -12px; margin-bottom: -12px; margin-left: 18px}
 
-.tablebg { background: url('images/banner.png') no-repeat right top;}
+.tablebg { background: url('images/baner.png') no-repeat right top;}
 
 
-.onlineshop{
-    background:url('images/mouse.jpg') no-repeat right bottom;
-    
-        
-}
+.onlineshop{background:url('images/mouse.jpg') no-repeat right bottom;}
+
+.admin {background: url('images/manager.jpg') no-repeat right bottom;}
+
+.contact {background: url('images/contactus.png') no-repeat right bottom;}
+
+
+#columns {
+        width: 600px;
+    }
+
+    #columns .column {
+        position: relative;
+        width: 46%;
+        padding: 1%;
+        border: solid 1px #000;
+    }
+
+    #columns .left {
+        float: left;
+    }
+
+    #columns .right {
+        float: right;
+    }
