The login to the admin page has been enhanced!

--- a/trunk/web/includes/headerlogout.html
+++ b/trunk/web/includes/headerlogout.html
@@ -21,10 +21,8 @@
 </tr>
 
 <tr> 
-    <td colspan="3" align="right" bgcolor="#D4A017">
-        <!-- The "Delete cookies" link is for testing and should 
-        be removed from a production environment -->
-        <a href="shop?action=deleteCookie">Delete cookies</a>
+    <td colspan="3" align="right" bgcolor="#D4A017" height="24">
+        
         <a href="shop?action=logout">Logout</a>
         
     </td>
