Directory Structure has been reordered!

--- a/trunk/web/includes/header.html
+++ b/trunk/web/includes/header.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>PC Shop 2011</title>
-    <link rel="stylesheet" href="/pcShop2011/pcshop.css">
+    <link rel="stylesheet" href="/pcShop2011/pcshop.css" />
 </head>
 
 <body>
