--- a/web/includes/headerlogout.html
+++ b/web/includes/headerlogout.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>PC Shop 2011</title>
-    <link rel="stylesheet" href="/pcShop2011/pcshop.css">
+    <link rel="stylesheet" href="/pcShop2011/pcshop.css" />
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 <tr> 
     <td colspan="3" align="right" bgcolor="#D4A017" height="24">
         
-        <a href="shop?action=logout">Logout</a>
+        <a href="http://localhost:8080/pcShop2011/mainApp/shop?action=logout">Logout</a>
         
     </td>
 </tr>
