--- a/web/pcshop.css
+++ b/web/pcshop.css
@@ -37,6 +37,8 @@ li {font-family: Arial, sans-serif; font-size: 12px; margin-bottom: 3px}
 
 .contact {background: url('images/contactus.png') no-repeat right bottom;}
 
+.mainstyle {background-color: #FFF380}
+
 
 #columns {
         width: 600px;
