--- a/trunk/web/includes/headerlogout.html
+++ b/trunk/web/includes/headerlogout.html
@@ -8,6 +8,7 @@
 <head>
     <title>PC Shop 2011</title>
     <link rel="stylesheet" href="/pcShop2011/pcshop.css" />
+    <link rel="SHORTCUT ICON" href="/pcShop2011/images/icon.png">
 </head>
 
 <body>
