--- a/src/main/webapp/includes/headerlogoutadmin.html
+++ b/src/main/webapp/includes/headerlogoutadmin.html
@@ -1,14 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
-
-<!-- Previously used color : CDC673-->
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 
 <html>
 <head>
     <title>PC Shop 2011</title>
-    <link rel="stylesheet" href="/pcShop2011/pcshop.css" />
-    <link rel="SHORTCUT ICON" href="/pcShop2011/images/icon.png">
+    <link rel="stylesheet" href="../css/pcshop.css" />
+    <link rel="SHORTCUT ICON" href="../images/icon.png">
 </head>
 
 <body>
